plugins {
    id 'java'
    id 'application'
}

group = 'it.unibo'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {
    
    // LangChain - Core
    implementation 'dev.langchain4j:langchain4j:1.12.2'
    
    // LangChain - Gemini
    implementation 'dev.langchain4j:langchain4j-google-ai-gemini:1.12.2'

    //LangChain - OpenAi
    implementation 'dev.langchain4j:langchain4j-open-ai:1.12.2'

    // LangChain4j - Ollama 
    implementation 'dev.langchain4j:langchain4j-ollama:1.14.0'
    
    // Testing
    testImplementation 'junit:junit:4.13.2'

    // Logging
    implementation 'org.slf4j:slf4j-simple:2.0.12'

    // Client MQTT Paho
    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'

    // Jackson - file reader
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
}

application {
    mainClass = 'it.unibo.Main'
}

task runTester(type: JavaExec) {
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'it.unibo.tester.MainTester'
}

tasks.named('test') {
    useJUnitPlatform()
}